# dpdk

./: meson_options.txt
drivers/net/: meson.build
drivers/net/cxi/: CXI_PMD_Architecture.md  README.md  build-cxi-pmd.sh  cxi_ethdev.c  cxi_ethdev.h  cxi_hw.c  cxi_hw.h  cxi_pmd_architecture.puml  cxi_rxtx.c  meson.build
drivers/net/cxi/include/: README.md  cassini_user_defs.h  cxi_prov_hw.h  libcxi.h
